quickstart/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp
  namespace: teste
  labels:
    app: goapp
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: goapp
